# $Id: CHANGELOG,v 1.11 2005/11/01 15:29:04 tom_kelly33 Exp $

* 2005-11-01 Hungarian lang added

* 2005-06-02 various fixes to fix progress-bar in livecd-install, extend satalist, and fix bootsplash creation

* 2005-03-13 works with unionfs, thanks to ikerek & etjr
	- removed ata_piix (already present)
* 2005-03-01
	- added ata_piix, thanks Yoshinori Okuji
* 2005-02-17
	- added sata_nv 

* 2005-01-15
	- added 'don't install lilo' entry

* 2004-12-20/31
        [livecd-utils]
	- made format swap default to yes
        - added 'nomce acpi=ht' to append options
        - changed bootloader item number
        - added touch  $mnt/halt (and commented out other)

* 2004: Numerous changes

* Tue, Dec 02, 2003, 0.2.0-cvs
  + Jaco Greeff <jaco@linuxminicd.org>:
    [livecd-install]:
      - Total revamp using perl-Qt
      - Initial release/announcement
      
* Fri, Nov 21, 2003, 0.1.0-cvs
  + Jaco Greeff <jaco@linuxminicd.org>:
    [livecd-install]:
      - Initial version
