@@ -1,4 +1,5 @@
-# $Id: AUTHORS,v 1.4 2005/01/15 16:28:34 tom_kelly33 Exp $
+# $Id: AUTHORS,v 1.5 2006/04/23 03:09:47 tom_kelly33 Exp $
 
 Jaco Greeff <jaco@puxedo.org>
 Tom Kelly <tom_kelly33@yahoo.com>
+Ivan Kerekes <ikerekes@gmail.com>
